# beachmat.tiledb

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: RcppExports.R  beachmat.tiledb-package.R  initializeCpp.R  initializeOptions.R  loadIntoMemory.R
inst/: NEWS.Rd
man/: initializeCpp.Rd  initializeOptions.Rd  loadIntoMemory.Rd
src/: Makevars  Makevars.in  RcppExports.cpp  initialize.cpp  load_dense.cpp  load_sparse.cpp
tests/: testthat.R
tests/testthat/: test-initializeCpp.R  test-loadIntoMemory.R
vignettes/: userguide.Rmd
